# scoop

./: .gitignore  LICENSE  configure.ac
src/: .gitignore  Auxiliary.dyn_hi  Auxiliary.dyn_o  Auxiliary.hs  Confluence.dyn_hi  Confluence.dyn_o  Confluence.hs  Constelm.dyn_hi  Constelm.dyn_o  Constelm.hs  DataSpec.dyn_hi  DataSpec.dyn_o  DataSpec.hs  DeadVariable.dyn_hi  DeadVariable.dyn_o  DeadVariable.hs  Expressions.dyn_hi  Expressions.dyn_o  InputParser.dyn_hi  InputParser.dyn_o  InputParser.hs  LPPE.dyn_hi  LPPE.dyn_o  LPPE.hs  LibScoop.dyn_hi  LibScoop.dyn_o  LibScoop.hs  LibScoop_stub.h  Linearise.dyn_hi  Linearise.dyn_o  Linearise.hs  MLPPE.dyn_hi  MLPPE.dyn_o  MLPPE.hs  Makefile.am  MaximalProgress.hs  Parelm.dyn_hi  Parelm.dyn_o  Parser.dyn_hi  Parser.dyn_o  (+46 more)
